# casaDelSabor

./: .dockerignore  Dockerfile  RAILWAY_API.md  README.md  package-lock.json  railway.json
agent/: .env.example  README.md  config.py  justfile  main.py  pyproject.toml  railway.toml
agent/documents/: horaires.md  info.md  menu.md
agent/rag/: __init__.py  chain.py  embeddings.py  ingestion.py  memory.py  tools.py  vectorstore.py
agent/scripts/: conversation.py  railway_control.py
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/scripts/: get-local-ip.js  start-dev.js  start-prod.js
mobile/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  TypingIndicator.tsx
mobile/src/config/: api.ts
mobile/src/screens/: ChatScreen.tsx
mobile/src/services/: chatService.ts
mobile/src/types/: chat.ts
scripts/: railway-control.sh
src/app/api/chat/: route.ts
src/components/chat/: ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx
src/types/: chat.ts
web/: README.md  package-lock.json  package.json
web-alt/: .env.example  README.md  package-lock.json  package.json
web-alt/src/app/: globals.css  layout.tsx  page.tsx
web-alt/src/app/contact/: page.tsx
web-alt/src/app/menu/: page.tsx
web-alt/src/app/reservation/: page.tsx
web-alt/src/components/chatbot/: ChatWindow.tsx  ChatbotWidget.tsx
web-alt/src/components/menu/: MenuCategory.tsx  MenuItem.tsx
web-alt/src/lib/: api.ts
web-alt/src/types/: chat.ts  restaurant.ts
web/src/app/: globals.css  layout.tsx  page.tsx
(+11 files in other folders)
