[project]
name = "casa-del-sabor-agent"
version = "1.0.0"
description = "Agent RAG pour le restaurant Casa del Sabor"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "langchain>=0.3.13",
    "langchain-mistralai>=0.2.4",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.4",
    "langchain-community>=0.3.13",
    "qdrant-client>=1.12.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "requests>=2.32.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
dev = "uvicorn main:app --reload --port 8000"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
